--- a/style/main.css
+++ b/style/main.css
@@ -1,6 +1,7 @@
 *{
     padding: 0;
     margin: 0;
+    outline: none;
 }
 
 body{
@@ -333,6 +334,7 @@ main{
 }
 .content_filter{
     padding: 0.6vmax;
+    padding-top: 1.66vmax;
 }
 .color_list input[type="checkbox"]:checked + label{
     box-shadow: 0 0 20px -3px #000;
@@ -341,4 +343,15 @@ main{
 input[type="checkbox"]:checked + label{
     background-color: #838d8f;
     color: #fff;
+}
+.price_box{
+    margin-top: 1vmax;
+}
+.price_box input{
+    border: none;
+    font-size: 1.08vmax;
+    color: #878787;
+    text-align: center;
+    width: 30%;
+    padding-top: 0.44vmax;
 }
