--- a/style/main.css
+++ b/style/main.css
@@ -360,3 +360,179 @@ input[type="checkbox"]:checked + label{
     padding-bottom: 1.66vmax;
     margin-top: 1.66vmax;
 }
+footer{
+    width: 100%;
+    min-height: 20.25vmax;
+    background-color: #fff;
+    padding-top: 5vmax;
+    padding-bottom: 5vmax;
+}
+#footer_nav li a{
+    text-transform: uppercase;
+    color: #3c3d41;
+    font-weight: bold;
+    font-size: 1vmax;
+    margin-right: 2vmax;
+}
+#footer_nav  li:last-of-type a{
+    margin-right: 0;
+}
+#footer_nav a:hover{
+    text-decoration: underline;
+}
+#footer_nav{
+    margin-bottom: 3vmax;
+}
+#news_letter p{
+    color: #3c3d41;
+    font-size: 0.91vmax;
+    font-weight: bold;
+    margin-right: 2vmax;
+}
+#news_letter input{
+    border: none;
+    height: 2.66vmax;
+    width: 18.8vmax;
+    background-color: #eee;
+    color: #878787;
+    font-size: 1vmax;
+    padding-left: 1.25vmax;
+    padding-right: 3vmax;
+    background-image: url(../img/png/mail-icon.png);
+    background-repeat: no-repeat;
+    background-position: 98% 50%;
+    border-radius: 0.33vw;
+}
+#soc_list{
+    margin-top: 2.8vmax;
+}
+
+#soc_list li{
+    list-style: none;
+    margin-right: 3.5vmax;
+}
+#soc_list li:last-of-type{
+    margin-right: 0;
+}
+#soc_list svg{
+    height: 1.25vmax;
+    width: 1.25vmax;
+    fill: #838d8f
+}
+#cart_box{
+    position: fixed;
+    right: 0;
+    top: 0;
+    height: 100vh;
+    z-index: 100;
+    background-color: #fff;
+    width: 35vw;
+    box-shadow: -3px 2px 9px rgba(88, 88, 88, 0.52);
+    transform: translateX(100%);
+    flex-flow: column nowrap !important;
+}
+#cart_box.open{
+    transform: translateX(0);
+}
+
+.title_cart{
+    background-color: #61af96;
+    width: 97%;
+    height: 4vmax;
+    padding: 1vmax 0.5vmax;
+    color: #fff;
+    fill: #fff!important;
+    cursor: pointer;
+}
+#next{
+    width: 1.5vmax;
+    height: 1.5vmax;
+    fill: #fff;
+    transform: rotate(0);
+}
+#order,
+.submit{
+    width: 100%;
+    height: 4vmax;
+    color: #fff;
+    border: none;
+    background-color: rgba(29,132,180,1.00);
+    font-size: 1.1vmax;
+    text-transform: uppercase;
+}
+.submit{
+    border-radius: 0.33vmax;
+    cursor: pointer;
+
+}
+#black_fill
+{
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    background-color: rgba(0,0,0,.7);
+    z-index: 101;
+    top: 0;
+    left: 0;
+    display: none;
+}
+#modal
+{
+    position: fixed;
+    z-index: 103;
+    width: 30vw;
+    height: auto;
+    top: 15vh;
+    display: none;
+    left: calc(50% - 15vw);
+}
+#content_modal{
+    background-color: #fff;
+    border-radius: 0.33vmax;
+    padding: 1.5vw;
+    width: 100%;
+}
+#black_fill.open,
+#modal.open{
+    display: block !important;
+}
+#close_modal svg{
+    width: 1.5vmax;
+    height: 1.5vmax;
+    position: absolute;
+    top: -2vmax;
+    right: -4vmax;
+    cursor: pointer;
+    fill: #fff;
+}
+.input{
+    width: 100%;
+    margin-bottom: 1vmax;
+}
+.input input{
+    width: 100%;
+    height: 3vmax;
+    text-align: center;
+    border-radius: 0.33vmax;
+    border: 1px solid #eee;
+    font-size: 1.1vmax;
+}
+#search_panel{
+    position: absolute;
+    z-index: 5;
+    background-color: #fff;
+    padding: 1vmax;
+    top: 0;
+    left: 0;
+    width: 95%;
+    display: none;
+}
+#search_panel.open{
+    display: block;
+}
+#search_panel input{
+    width: 100%;
+    border: 1px solid #2e2e30;
+    height: 2vmax;
+    padding-left: 1vmax;
+}
